<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Concerns\HasUuids;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

/**
 * @method static create(string[] $array)
 * @property mixed $id
 */
class CryptoCurrency extends Model
{
    use HasUuids, HasFactory;

    protected $fillable = [
        'name',
        'symbol',
    ];
}
