@startuml

' avoid problems with angled crows feet
skinparam linetype ortho

entity CryptoCurrency {
    * id
    --
    * name : string
    * symbol : string
    --
    * created_at
    * updated_at
}

entity Wallet {
    * id
    --
    * user_id : integer
    * currency_symbol : string
    * address : string
    * balance : decimal
    * created_at
    * updated_at
}

entity CryptoDeposit {
    * id
    --
    * user_id : integer
    * currency_symbol : string
    * amount : decimal
    * address : string
    * status : enum
    --
    * created_at
    * updated_at
}

entity CryptoWithdrawal {
    * id
    --
    * user_id : integer
    * currency_symbol : string
    * amount : decimal
    * address : string
    * status : enum
    --
    * created_at
    * updated_at
}

' Relationships

User ||--o{ Wallet : has many
User ||--o{ CryptoDeposit : has many
User ||--o{ CryptoWithdrawal : has many

Wallet ||--o{ CryptoDeposit : has many
Wallet ||--o{ CryptoWithdrawal : has many
Wallet }o--|| CryptoCurrency : has each one

CryptoDeposit }o--|| CryptoCurrency : has each one
CryptoWithdrawal }o--|| CryptoCurrency : has each one

@enduml
